--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
+@media (max-width: 1439px) {
+  :root {
+    --unit-time-length: 4px;
+    --default-channel-count: 5;
+  }
+}
+
+@media (min-width: 1440px) {
+  :root {
+    --unit-time-length: 6px;
+    --default-channel-count: 5;
+  }
+}
+
+:root {
+  --day-length: calc(var(--unit-time-length) * 60 * 24);
+  --hour-length: calc(var(--unit-time-length) * 60);
+  --channel-count: var(--default-channel-count);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +25,38 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  line-height: normal;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.wrapper {
+  display: flex;
+  height: 100%;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.page-header {
+  flex-shrink: 0;
+  position: fixed;
+  top: 0;
+}
+
+.page-header, .page-footer {
+  flex-shrink: 0;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.page-body {
+  margin-top: 5rem;
+}
+
+.textCenter {
+  text-align: center;
 }
